build based on 1fb47d7

--- a/previews/PR411/examples/docs_4_rational_opt/index.html
+++ b/previews/PR411/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.761817e-01   1.735564e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.780974e-01   3.459624e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.800164e-01   5.172268e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.821933e-01   6.870570e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.844746e-01   8.554691e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.870578e-01   1.022046e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.898430e-01   1.186756e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.925532e-01   1.350090e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.954712e-01   1.511408e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.985830e-01   1.670612e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.996771e-01   1.684240e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   7.892535e-01   1.267020e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   7.914373e-01   2.527048e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   7.937615e-01   3.779473e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   7.966278e-01   5.021165e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   7.995033e-01   6.253883e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   8.027225e-01   7.474563e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   8.062608e-01   8.682054e+01
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   8.102223e-01   9.873833e+01
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   8.140879e-01   1.105532e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   8.212497e-01   1.217656e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   8.227829e-01   1.227541e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.250743e-01   3.076219e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.270143e-01   6.115941e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.291354e-01   9.114790e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.315220e-01   1.206556e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.341367e-01   1.496394e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.370565e-01   1.780117e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.401812e-01   2.057727e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.434598e-01   2.329239e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.469534e-01   2.594008e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.508478e-01   2.850239e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.517191e-01   2.843178e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.585910e-01   2.180592e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.617552e-01   4.331299e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.635092e-01   6.472363e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.658699e-01   8.586088e+01
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.684812e-01   1.067279e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.715505e-01   1.272398e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.750921e-01   1.473399e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.796114e-01   1.668017e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.838344e-01   1.860141e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.886252e-01   2.046558e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.897981e-01   2.041658e+02
 -------------------------------------------------------------------------------------------------
-  0.861283 seconds (1.37 M allocations: 75.232 MiB, 9.20% gc time, 94.64% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 23 August 2023 12:06">Wednesday 23 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  1.065552 seconds (1.37 M allocations: 75.103 MiB, 96.02% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 24 August 2023 07:22">Thursday 24 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
