--- a/previews/PR419/examples/docs_4_rational_opt/index.html
+++ b/previews/PR419/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.410854e-01   1.559855e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.425365e-01   3.112664e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.440226e-01   4.658221e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.463351e-01   6.188741e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.483003e-01   7.712475e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.511774e-01   9.214079e+01
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.544658e-01   1.069575e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.572597e-01   1.217175e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.609004e-01   1.361779e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.648030e-01   1.504205e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.659949e-01   1.516528e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.027443e-01   1.659078e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.043645e-01   3.309261e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.060503e-01   4.950085e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.078958e-01   6.580076e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.098821e-01   8.198306e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.120384e-01   9.803307e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.145662e-01   1.139015e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.171100e-01   1.296365e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.198691e-01   1.451919e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.228538e-01   1.605513e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.239015e-01   1.618845e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.615262e-01   2.766051e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.636192e-01   5.500260e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.658966e-01   8.199037e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.684505e-01   1.085628e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.713844e-01   1.346314e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.745735e-01   1.601822e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.780863e-01   1.851429e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.818423e-01   2.095106e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.858598e-01   2.332453e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.901159e-01   2.563341e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.911583e-01   2.556510e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   2.911761e-01   3.434348e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   2.929330e-01   6.827500e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   2.943269e-01   1.019275e+02
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   2.959726e-01   1.351476e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   2.978419e-01   1.678743e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.000211e-01   1.999859e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.024035e-01   2.314788e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.050543e-01   2.622484e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.079997e-01   2.922081e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.112535e-01   3.212816e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.119901e-01   3.205230e+02
 -------------------------------------------------------------------------------------------------
-  1.577703 seconds (1.37 M allocations: 74.511 MiB, 43.65% gc time, 97.31% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 30 August 2023 15:09">Wednesday 30 August 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.712815 seconds (1.37 M allocations: 75.202 MiB, 96.05% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 1 September 2023 09:44">Friday 1 September 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
