--- a/previews/PR406/examples/docs_4_rational_opt/index.html
+++ b/previews/PR406/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   5.245827e-01   1.906277e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   5.259263e-01   3.802814e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   5.276190e-01   5.685921e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   5.288655e-01   7.563360e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   5.311883e-01   9.412857e+01
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   5.329265e-01   1.125859e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   5.357558e-01   1.306565e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   5.377758e-01   1.487609e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   5.408496e-01   1.664049e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   5.436167e-01   1.839531e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   5.444301e-01   1.855151e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   6.316136e-01   1.583247e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   6.339087e-01   3.155029e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   6.360038e-01   4.716953e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   6.382784e-01   6.266858e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   6.404831e-01   7.806608e+01
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   6.430721e-01   9.330214e+01
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   6.463490e-01   1.083006e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   6.495593e-01   1.231604e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   6.530793e-01   1.378087e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   6.569173e-01   1.522262e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   6.583218e-01   1.534204e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ Linear Minimization Oracle: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.022180e-01   3.308870e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.039128e-01   6.580834e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.057198e-01   9.812906e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.080209e-01   1.298613e+02
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.103652e-01   1.611005e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.131876e-01   1.915785e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.162524e-01   2.213422e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.194221e-01   2.504523e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.227762e-01   2.788309e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.261736e-01   3.065852e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.271533e-01   3.056671e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.568206e-01   2.802529e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.593504e-01   5.565598e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.614259e-01   8.300458e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.638855e-01   1.099247e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   3.666815e-01   1.363581e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   3.699496e-01   1.621842e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   3.735493e-01   1.873916e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   3.774922e-01   2.119249e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   3.818709e-01   2.356818e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   3.866693e-01   2.586189e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   3.877572e-01   2.578933e+02
 -------------------------------------------------------------------------------------------------
-  1.359584 seconds (1.38 M allocations: 75.460 MiB, 44.56% gc time, 97.36% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 5 September 2023 12:39">Tuesday 5 September 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.843083 seconds (1.37 M allocations: 75.189 MiB, 95.11% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Tuesday 5 September 2023 12:41">Tuesday 5 September 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
